fix: update GPTClient.java API key and adjust .gitignore for sensitive file exclusion

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -32,5 +32,4 @@ build/
 ### VS Code ###
 .vscode/
 
-# Exclude sensitive files
-**/GPTClient.java
+src/main/java/lk.ijse.gdse.backend/util/GPTClient.java
