--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -32,4 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-GPTClient
+# Ignore GPTClient.java file (contains API keys)
+src/main/java/lk/ijse/gdse/backend/util/GPTClient.java
