fix: update .gitignore to ignore ImgBBClient.java for sensitive information

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -34,3 +34,4 @@ build/
 
 # Ignore GPTClient.java file (contains API keys)
 src/main/java/lk/ijse/gdse/backend/util/GPTClient.java
+src/main/java/lk/ijse/gdse/backend/util/ImgBBClient.java
