feat: implement user profile management and payment processing features; add new endpoints and PayHere integration

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -27,3 +27,8 @@ spring.mail.username=hasindustream@gmail.com
 spring.mail.password=whzdjqjhkmdoxidq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# PayHere Configuration
+payhere.merchant.id=1231966
+payhere.merchant.secret=MTEzODg1MDU2NjQyMTQyNzcwMTcxMDY2MTU0MjQ2MjE4NDI1MDQ0NA==
+payhere.domain=localhost
